Fix compilation in Java 9
Tests still fail; at the very least because of missing Jetty ALPN. I
don't know why the dependency on javax.annotations is unnecessary in the
compiler tests and the example when using Maven.

--- a/interop-testing/build.gradle
+++ b/interop-testing/build.gradle
@@ -26,6 +26,7 @@ dependencies {
             libraries.netty_tcnative,
             libraries.oauth_client,
             libraries.truth
+    compileOnly libraries.javax_annotation
     runtime libraries.opencensus_impl
     testCompile project(':grpc-context').sourceSets.test.output
 }
