--- a/grpclb/build.gradle
+++ b/grpclb/build.gradle
@@ -14,6 +14,7 @@ dependencies {
             project(':grpc-protobuf'),
             project(':grpc-stub'),
             libraries.protobuf
+    compileOnly libraries.javax_annotation
     testCompile libraries.truth,
                 project(':grpc-core').sourceSets.test.output
 }
