--- a/interop-testing/build.gradle
+++ b/interop-testing/build.gradle
@@ -23,10 +23,11 @@ dependencies {
             project(':grpc-testing'),
             libraries.junit,
             libraries.mockito,
-            libraries.netty_tcnative,
             libraries.oauth_client,
             libraries.truth
-    runtime libraries.opencensus_impl
+    runtime libraries.opencensus_impl,
+            libraries.netty_tcnative,
+            libraries.conscrypt
     testCompile project(':grpc-context').sourceSets.test.output
 }
 
@@ -38,7 +39,7 @@ compileJava {
 }
 
 test {
-    // For the automated tests, use Jetty ALPN.
+    // For the automated tests, allow testing Jetty ALPN.
     jvmArgs "-javaagent:" + configurations.alpnagent.asPath
 }
 
@@ -48,16 +49,8 @@ test {
 task test_client(type: CreateStartScripts) {
     mainClassName = "io.grpc.testing.integration.TestServiceClient"
     applicationName = "test-client"
-    defaultJvmOpts = ["-javaagent:JAVAAGENT_APP_HOME" + configurations.alpnagent.singleFile.name]
     outputDir = new File(project.buildDir, 'tmp')
     classpath = jar.outputs.files + configurations.runtime
-    dependencies {
-        runtime configurations.alpnagent
-    }
-    doLast {
-        unixScript.text = unixScript.text.replace('JAVAAGENT_APP_HOME', '\$APP_HOME/lib/')
-        windowsScript.text = windowsScript.text.replace('JAVAAGENT_APP_HOME', '%APP_HOME%\\lib\\')
-    }
 }
 
 task test_server(type: CreateStartScripts) {
